--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.8.6",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.48.2",
